<resources>
    <string name="app_name">ToDoList</string>
    <string name="logo_text">Things ToDo</string>
    <string name="next"><u>Next</u></string>
    <string name="sign_up_text">Create profile to start yor first ToDoList</string>
    <string name="your_name">Your name</string>
    <string name="password">Password</string>
    <string name="email">Your email address</string>
    <string name="create_profile">create your profile</string>
    <string name="have_account">"Already have an account? "</string>
    <string name="log_in">Log in</string>
    <string name="login_text">Welcome back!</string>
    <string name="forget_password_text">Forgot your password?</string>
    <string name="donot_have_account">Don’t have an account?</string>
    <string name="list_to_Do">List toDo</string>
    <string name="log_out"><u>Logout</u></string>
    <string name="search">Search</string>
    <string name="list">List :</string>
    <string name="create_list">Create new list here</string>
    <string name="delete">Delete</string>
    <string name="create_task">Create new task here</string>
    <string name="edit">Edit</string>
    <string name="description">Description</string>
    <string name="result">Result :</string>
    <string name="required_field">Required field</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete_list">Are you sure you want to delete this list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="wrong">Something wrong</string>
    <string name="delete_Task">Are you sure you want to delete this task?</string>
</resources>