<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="@dimen/margin_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_meduim"
        android:text="@string/create_task"
        android:textColor="@color/white"
        android:textSize="@dimen/margin_meduim" />

    <EditText
        android:id="@+id/et_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="@dimen/margin_small"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_gray" />

    <EditText
        android:id="@+id/et_task_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/type"
        android:inputType="text"
        android:padding="@dimen/margin_small"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_gray" />

    <EditText
        android:id="@+id/et_task_dscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_meduim"
        android:backgroundTint="@color/dark_gray"
        android:hint="@string/description"
        android:inputType="text"
        android:padding="@dimen/margin_small"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/create" />

    </LinearLayout>

</LinearLayout>