<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_large"
            android:gravity="center"
            android:layout_margin="@dimen/margin_large"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            android:hint="@string/your_name"
            android:textColorHint="@color/white"
            android:background="@drawable/bg_edit_text"
            android:layout_marginTop="@dimen/margin_large"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:background="@drawable/bg_edit_text"
            android:layout_marginTop="@dimen/margin_large"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:background="@drawable/bg_edit_text"
            android:layout_marginTop="@dimen/margin_large"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/create_profile"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/gradient_button"
            android:foreground="?selectableItemBackground"
            android:textSize="@dimen/margin_meduim"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_large" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textStyle="bold"
            android:textSize="@dimen/margin_meduim"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_small" />
        
    </LinearLayout>

</FrameLayout>