<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".list.ListActivity">

    <include layout="@layout/top_bar_list" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_meduim"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="@drawable/bg_edit_text"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_small"/>

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/search"
                android:inputType="text"
                android:textColorHint="@color/gray" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_meduim">

            <TextView
                android:id="@+id/tv_list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:textColor="@color/white"
                android:textSize="@dimen/margin_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_list_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/delete"
                android:textColor="@color/gray"
                android:textSize="@dimen/margin_meduim" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/et_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_small"
                android:src="@drawable/ic_plus" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/create_task"
                android:textColor="@color/white" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_meduim" />

    </LinearLayout>

</LinearLayout>