<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.MainActivity"
    android:background="@drawable/gradient_background">

   <include layout="@layout/top_bar_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_meduim">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_edit_text"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_small"/>

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/search"
                android:inputType="text"
                android:textColorHint="@color/gray" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/list"
            android:textSize="@dimen/margin_large"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_meduim"/>

        <LinearLayout
            android:id="@+id/et_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_edit_text"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/create_list"
                android:textColor="@color/white" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_lists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_meduim"/>

    </LinearLayout>

</LinearLayout>